<resources>
    <string name="app_name">Ngoma</string>
    <string name="prev">Prev</string>
    <string name="play">Play</string>
    <string name="next">Next</string>
    <string name="playing">Now Playing</string>
    <string name="song">Song:</string>
    <string name="album">Album:</string>
    <string name="artist">Artist:</string>
    <string name="song_list">Song List</string>
</resources>
