<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CurrentSong"
    android:theme="@style/TitleStyle"
    android:background="@color/colorPrimaryDark">

    <!-- labels -->
    <TextView
        android:id="@+id/title_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toLeftOf="@id/label_guide"
        android:text="@string/song"/>

    <TextView
        android:id="@+id/album_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toLeftOf="@id/label_guide"
        app:layout_constraintTop_toBottomOf="@id/title_label"
        android:text="@string/album"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toLeftOf="@id/label_guide"
        app:layout_constraintTop_toBottomOf="@id/album_label"
        android:text="@string/artist"/>

    <android.support.constraint.Guideline
        android:id="@+id/label_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4"/>

    <!-- values -->
    <TextView
        android:id="@+id/playing_song_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/label_guide"
        tools:text="@string/song"/>

    <TextView
        android:id="@+id/playing_album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/label_guide"
        app:layout_constraintTop_toBottomOf="@id/playing_song_title"
        tools:text="@string/album"/>

    <TextView
        android:id="@+id/playing_artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/label_guide"
        app:layout_constraintTop_toBottomOf="@id/playing_album"
        tools:text="@string/artist"/>

    <ImageView
        android:id="@+id/album_art_playing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="196dp"
        android:minHeight="196dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttons_guide"
        android:src="@drawable/placeholder_art"/>

    <android.support.constraint.Guideline
        android:id="@+id/buttons_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8"/>

    <!-- Buttons -->
    <Button
        android:id="@+id/previous_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/buttons_guide"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/play_button"
        android:text="@string/prev"/>

    <Button
        android:id="@+id/play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/previous_button"
        app:layout_constraintRight_toLeftOf="@id/next_button"
        app:layout_constraintTop_toBottomOf="@id/buttons_guide"
        android:text="@string/play"/>

    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/play_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttons_guide"
        android:text="@string/next"/>

</android.support.constraint.ConstraintLayout>